<resources>
    <string name="app_name">TicTacToe</string>
    <string name="Play">play</string>
    <string name="About">about</string>
    <string name="Exit">exit</string>
    <string name="tic_tac_toe">Tic Tac Toe</string>
    <string name="back">Back</string>
    <string name="new_game">New</string>
    <string name="playerx">0</string>
    <string name="playero">0</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="finish">Finish</string>
    <string name="player_name">Player name</string>
    <string name="backToMainMenu">Back</string>
    <string name="against">Against:</string>
    <string name="player">Player:</string>
    <string name="second_player">Second Player</string>
    <string name="single_play">Single Player</string>
    <string name="multiplayer">Multi-Player</string>

</resources>
