<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_play_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/wallprotraitbackground"
    tools:context="com.example.nero.tictactoe.PlayScreen"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@mipmap/woodbackground"
        android:layout_weight="0.70"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/tictactoelogo"
            android:id="@+id/imageView3"
            android:layout_weight="1"
            android:layout_marginBottom="4dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:layout_margin="20dp"
        android:background="@mipmap/woodboardframe">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_centerVertical="true"
            android:layout_weight="2"
            android:background="@mipmap/greenboard"
            android:gravity="center_vertical"
            android:layout_margin="10dp">

            <Button
                android:text="@string/single_play"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/singlePlayButton"
                android:textSize="30sp"
                android:textStyle="bold|italic"
                android:textColor="@color/white"
                android:fontFamily="serif-monospace"
                android:background="@android:color/transparent"
                />

            <Button
                android:text="@string/multiplayer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/multiPlayButton"
                android:textSize="30sp"
                android:textStyle="bold|italic"
                android:textColor="@color/white"
                android:fontFamily="serif-monospace"
                android:background="@android:color/transparent"
                />
            <Button
                android:text="@string/About"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:id="@+id/aboutButton"
                android:textSize="30sp"
                android:textStyle="bold|italic"
                android:textColor="@color/white"
                android:fontFamily="serif-monospace"
                android:background="@android:color/transparent"/>

            <Button
                android:text="@string/Exit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/exitButton"
                android:textSize="30sp"
                android:textStyle="bold|italic"
                android:textColor="@color/white"
                android:fontFamily="serif-monospace"
                android:background="@android:color/transparent"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@mipmap/xplayer"
            android:id="@+id/imageView"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@mipmap/oplayer"
            android:id="@+id/imageView2"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>
