<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_play_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/wallprotraitbackground"
    tools:context="com.example.nero.tictactoe.PlayScreen"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@mipmap/woodbackground"
        android:layout_weight="0.30"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/tictactoelogo"
            android:id="@+id/imageView3"
            android:layout_weight="1"
            android:layout_marginBottom="4dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:layout_margin="15dp"
        android:background="@mipmap/woodboardframe">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_centerVertical="true"
            android:layout_weight="2"
            android:background="@mipmap/greenboard"
            android:gravity="center_vertical"
            android:layout_margin="10dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.40"
                android:gravity="center_vertical|center_horizontal">
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    app:srcCompat="@mipmap/xplayer"
                    android:id="@+id/imageViewForPlayer"
                    android:layout_weight="0.30"
                    android:layout_marginLeft="10dp"/>
                <TextView
                    android:text="@string/player"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView3"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:fontFamily="serif-monospace"
                    android:background="@android:color/transparent"
                    />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text=""
                    android:hint="@string/player_name"
                    android:ems="10"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                    android:id="@+id/userName"
                    android:layout_weight="1.50"
                    android:textColorHint="@color/buttonBorder"
                    android:maxLength="8"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.40"
                android:gravity="center_vertical|center_horizontal">
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    app:srcCompat="@mipmap/oplayer"
                    android:id="@+id/imageViewForAndroid"
                    android:layout_weight="0.30"
                    android:layout_marginLeft="10dp"/>
                <TextView
                    android:text="@string/against"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/androidText"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:textStyle="bold|italic"
                    android:textColor="@color/white"
                    android:fontFamily="serif-monospace"
                    android:background="@android:color/transparent"
                    />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text=""
                    android:hint="@string/player_name"
                    android:ems="10"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                    android:id="@+id/userOpponentName"
                    android:layout_weight="1.50"
                    android:textColorHint="@color/buttonBorder"
                    android:maxLength="8"/>
            </LinearLayout>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.50"
                android:orientation="horizontal">

                <TextView
                    android:text="First Move"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/textView"
                    android:layout_weight="2"
                    android:gravity="center_vertical|center_horizontal"
                    android:textSize="20sp"
                    android:textColor="@color/white" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    app:srcCompat="@mipmap/xplayer"
                    android:id="@+id/imageView7"
                    android:layout_weight="1" />

                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/xmove"
                    android:layout_weight="1"
                    android:checked="true"
                    android:textColorLink="?android:attr/colorMultiSelectHighlight" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    app:srcCompat="@mipmap/oplayer"
                    android:id="@+id/imageView6"
                    android:layout_weight="1" />

                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/omove"
                    android:layout_weight="1"
                    android:textColorLink="?android:attr/colorMultiSelectHighlight" />

            </RadioGroup>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:elevation="5dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <Button
                        android:text="@string/backToMainMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/backButton"
                        android:textSize="25sp"
                        android:textStyle="bold|italic"
                        android:textColor="@color/white"
                        android:fontFamily="serif-monospace"
                        android:background="@android:color/transparent"
                        android:layout_weight="1" />

                    <Button
                        android:text="@string/finish"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/finishButton"
                        android:textSize="25sp"
                        android:textStyle="bold|italic"
                        android:textColor="@color/white"
                        android:fontFamily="serif-monospace"
                        android:background="@android:color/transparent"
                        android:layout_weight="1" />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.30">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@mipmap/xplayer"
            android:id="@+id/imageView"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@mipmap/oplayer"
            android:id="@+id/imageView2"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>
